# blob-voice-observer

./: .gitignore  LICENSE  NOTICE  README.md  build.bat  pyproject.toml  requirements.txt  venv.bat
docs/: LATENCY-RESEARCH.md
src/: config.py  hotkey_manager.py  key_sender.py  main.py  recognition.py  speech_detector.py  voice_listener.py  voice_listener_vosk.py
tests/: test_config.py  test_hotkey_manager.py  test_key_sender.py  test_recognition.py  test_speech_detector.py  test_voice_listener.py
